@@ -54,6 +54,11 @@ CVS code -
 	  and NANO_APPEND_KEY are.  Changes to shortcut_init(), usage(),
 	  main(), search_init(), nanorc.sample, nano.1, nanorc.5,
 	  nano.texi, etc. (DLR)
+- chars.c:
+  make_mbstring()
+	- Change erroneous ENABLE_EXTRA #ifdef to NANO_EXTRA to fix a
+	  compilation problem when --enable-nanorc isn't used and
+	  --enable-extra is. (DLR)
 - cut.c:
   cut_line()
 	- Set placewewant properly after cutting a line, to avoid a
@@ -178,6 +183,11 @@ CVS code -
   total_update()
 	- Simplify to call clearok(TRUE) and wrefresh() on edit, which
 	  updates the entire screen in fewer function calls. (DLR)
+  do_credits()
+	- Save the keystroke that breaks us out of the credits (if any)
+	  and put it back so that it isn't lost.  This is especially
+	  needed if the keystroke is part of a multibyte character.
+	  (DLR)
 - configure.ac:
 	- Minor tweaks to some of the test blocks to avoid XSI:isms.
 	  (DLR, adapted from a Debian patch for GNU ed by David
